--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Ashish Seth Homepage"
 title_separator          : "-"
 name                     : &name "Ashish Seth"
 description              : &description "personal description"
-url                      : "https://ashishseth.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://cs20s030.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "cs20s030/ashishseth.github.io"
+repository               : "cs20s030/cs20s030.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
