changes made in navigation

--- a/_config.yml
+++ b/_config.yml
@@ -88,21 +88,20 @@ author:
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=aBn1e34AAAAJ&hl=en"
   email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
-  uri              :
+  researchgate     : "https://www.researchgate.net/profile/Ashish-Seth-2/research"
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "https://github.com/cs20s030"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/ashish-seth-bb9a4a233/"
   orcid            : 
   pinterest        :
   soundcloud       :
