--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /files/resume_final.pdf
+    url: /files/resume_stanford.pdf
     
   #- title: "Guide"
   #  url: /markdown/
