--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@ main:
 
   #- title: "Talks"
   #  url: /talks/
-  - title: "Projects"
-    url: /talks/    
+  #- title: "Projects"
+  #  url: /talks/    
 
   #- title: "Teaching"
   #  url: /teaching/    
@@ -18,7 +18,7 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /files/resume_stanford.pdf
+    url: /files/Curriculum_Vitae_for_Researchers.pdf
     
   #- title: "Guide"
   #  url: /markdown/
