--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Ashish Seth"
   avatar           : "ashishseth_profile.jpg"
-  bio              : "Research Interest: Self-Supervised Learning, Speech Recognition, Audio Classification"
-  location         : "Uttar Pradesh, India"
+  bio              : "Research Interest: Speech Langauge Understanding, Audio Processing, Self-Supervised Learning, Audio Classification"
+  location         : "College Park, Maryland"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=aBn1e34AAAAJ&hl=en"
